fixing write mode issues: APPEND, OVERWRITE, SKIP